Computer will now hit coordinates correctly

--- a/src/styles.css
+++ b/src/styles.css
@@ -32,3 +32,12 @@ header > h1 {
 .ship {
   background-color: red;
 }
+
+.cell.attacked {
+  background-color: black;
+  pointer-events: none;
+}
+
+.cell.ship.hit {
+  background-color: black;
+}
