--- a/src/styles.css
+++ b/src/styles.css
@@ -21,7 +21,7 @@ header > h1 {
   display: grid;
   grid-template-columns: repeat(10, 25px);
   grid-template-rows: repeat(10, 25px);
-  gap: .5px;
+  gap: 0.5px;
 }
 
 .cell {
