--- a/src/styles.css
+++ b/src/styles.css
@@ -42,3 +42,8 @@ header > h1 {
   background-color: red;
   pointer-events: none;
 }
+
+.ship-preview {
+  background-color: rgba(0, 255, 0, 0.3);
+  border: 1px solid black;
+}
