--- a/src/styles.css
+++ b/src/styles.css
@@ -14,7 +14,8 @@ header > h1 {
 .game-container {
   display: flex;
   justify-content: space-around;
-  border: 1px solid black;
+  /* border: 1px solid black; */
+  margin-top: 10px;
 }
 
 .board {
@@ -39,13 +40,12 @@ header > h1 {
 }
 
 .cell.computerShip.hit {
-  background-color: red;
+  background-color: blue;
   pointer-events: none;
 }
 
 .ship-preview {
   background-color: rgba(0, 255, 0, 0.3);
-  border: 1px solid black;
 }
 
 .output {
@@ -55,16 +55,32 @@ header > h1 {
 .boardname {
   text-align: center;
 }
-
-footer {
+.ships-container {
+  min-height: 5.85rem;
+  text-align: center;
+  padding-top: 5px;
+}
+.orientation {
+  text-align: center;
+  margin-top: 12px;
+}
+footer,
+footer p {
   /* display: flex; */
   text-align: center;
+  font-size: 2rem;
+}
+.gameStatus {
+  border: 1px solid black;
+  min-height: 50px;
+  min-width: 185px;
+  margin-top: 24px;
 }
 
 .textarea {
   border: 1px solid black;
   min-height: 50%;
-  margin-top: 25px;
+  margin-top: 10px;
   display: flex;
   /* justify-content: center; */
   flex-direction: column;
@@ -72,6 +88,6 @@ footer {
 }
 
 .startBtn {
-  margin-left: 26%;
-  padding: 5px;
+  width: 100%;
+  height: 32px;
 }
